--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 1
 date: 2014-07-18
-img: profile.png
+img: meep.png
 alt: image-alt
 project-date: Winter Quarter 2022
 client: Start Bootstrap
