--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -2,8 +2,8 @@
 layout: default
 modal-id: 1
 date: 2014-07-18
-img: meep.png
-alt: image-alt
+img: submarine.png
+alt: cabin.png
 project-date: Winter Quarter 2022
 client: Start Bootstrap
 category: Web Development
