--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -2,8 +2,8 @@
 layout: default
 modal-id: 5
 date: 2014-07-14
-img: safe.png
-alt: image-alt
+img: acid.png
+alt: submarine.png
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
