--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -2,8 +2,8 @@
 layout: default
 modal-id: 2
 date: 2014-07-17
-img: cake.png
-alt: image-alt
+img: carniball.png
+alt: cake.png
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
