--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 6
 date: 2014-07-15
-img: acaffold.png
+img: scaffold.png
 alt: safe.png
 project-date: April 2014
 client: Start Bootstrap
