--- a/_posts/2022-07-14-project-5.markdown
+++ b/_posts/2022-07-14-project-5.markdown
@@ -1,9 +1,9 @@
 ---
 layout: default
 modal-id: 5
-date: 2014-07-14
+date: 2022-07-14
 img: acid.png
-alt: submarine.png
+alt: cabin.png
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
