--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -10,5 +10,5 @@ category: Web Development
 description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam. 
 link: https://cilmering.itch.io/carni-ball
 icon: https://itch.io/embed/1672394
-credit: me
+credit: Carni-Ball by Cilmering, MintJaan, El Estebann, Lenl, Optimalystic
 ---
