--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -8,4 +8,5 @@ project-date: April 2014
 client: Start Bootstrap
 category: Web Development
 description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+embed: <iframe frameborder="0" src="https://itch.io/embed/1618452" width="208" height="167"><a href="https://pjheric.itch.io/dice-golf">Dice Golf by pjheric, Dawdle, DragonTamer13, Aipysurus, El Estebann, JustYun, Nathan More</a></iframe>
 ---
