--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -1,7 +1,8 @@
 ---
 layout: default
 modal-id: 3
-date: 2014-07-16
+title: Dice Golf
+date: 2022-07-17
 img: dice.png
 alt: circus.png
 project-date: April 2014
