--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,7 +1,8 @@
 ---
 layout: default
 modal-id: 2
-date: 2014-07-17
+title: Carniball
+date: 2022-08-22
 img: carniball.png
 alt: cake.png
 project-date: April 2014
