--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -1,7 +1,8 @@
 ---
 layout: default
 modal-id: 1
-date: 2014-07-18
+title: Meep's Maintenance
+date: 2022-06-11
 img: meep.png
 alt: cabin.png
 project-date: Winter Quarter 2022
