Updated release dates

--- a/_posts/2022-07-14-project-5.markdown
+++ b/_posts/2022-07-14-project-5.markdown
@@ -2,10 +2,10 @@
 layout: default
 modal-id: 5
 title: Acid Trip 4
-date: 2022-07-14
+date: 2022-03-10
 img: acid.png
 alt: cabin.png
-project-date: April 2014
+project-date: Winter Quarter 2022
 client: Start Bootstrap
 category: Web Development
 description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
