--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -5,7 +5,7 @@ title: Meep's Maintenance
 date: 2022-06-11
 img: meep.png
 alt: cabin.png
-project-date: Winter Quarter 2022
+project-date: Spring Quarter 2022
 client: Start Bootstrap
 category: Web Development
 description: Text here
