--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -6,8 +6,8 @@ date: 2022-06-11
 img: meep.png
 alt: cabin.png
 project-date: Spring Quarter 2022
-client: Start Bootstrap
-category: Web Development
-description: Text here
+client: UCI GDIM 61
+category: UI-UX
+description: I made the UI for this
 embed: <iframe frameborder="0" src="https://itch.io/embed/1552188" width="208" height="167"><a href="https://charliethecoder.itch.io/meeps-maintenance">Meep's Maintenance by CharlietheCoder, eiviy, namank100, ninjadare, El Estebann, JDioso17, MirrorCube, Zaney, Stratagist, Riifushi</a></iframe>
 ---
