--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -6,8 +6,8 @@ date: 2022-04-24
 img: laser.png
 alt: game.png
 project-date: April 2022
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+client: California Collegiate Game Jam
+category: Lead Programmer
+description: I programmed this
 embed: <iframe frameborder="0" src="https://itch.io/embed/1500937" width="208" height="167"><a href="https://elestebann.itch.io/laserscape">LaserScape by El Estebann, zfxd, stubbelj, chograph, innominev3945</a></iframe>
 ---
