--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -6,8 +6,8 @@ date: 2022-08-22
 img: carniball.png
 alt: cake.png
 project-date: August 2022
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam. 
+client: SGDA Summer Game Jam 2022
+category: Programmer
+description: I programmed this
 embed: <iframe frameborder="0" src="https://itch.io/embed/1672394" width="208" height="167"><a href="https://cilmering.itch.io/carni-ball">Carni-Ball by Cilmering, MintJaan, El Estebann, Lenl, Optimalystic</a></iframe>
 ---
