--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -7,6 +7,7 @@ img: carniball.png
 alt: cake.png
 project-date: August 2022
 client: SGDA Summer Game Jam 2022
+clientLink: https://itch.io/jam/sgda-sgj-2022/rate/1672394
 category: Programmer
 description: I programmed this
 embed: <iframe frameborder="0" src="https://itch.io/embed/1672394" width="208" height="167"><a href="https://cilmering.itch.io/carni-ball">Carni-Ball by Cilmering, MintJaan, El Estebann, Lenl, Optimalystic</a></iframe>
