--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -4,7 +4,7 @@ modal-id: 1
 title: Meep's Maintenance
 date: 2022-06-11
 img: meep.png
-alt: cabin.png
+alt: meep-full.png
 project-date: Spring Quarter 2022
 client: UCI GDIM 61
 category: UI-UX
