--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -4,7 +4,7 @@ modal-id: 4
 title: Laserscape
 date: 2022-04-24
 img: laser.png
-alt: game.png
+alt: laser-full.png
 project-date: April 2022
 client: California Collegiate Game Jam
 clientLink: https://itch.io/jam/california-collegiate-jam
