--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -4,7 +4,7 @@ modal-id: 3
 title: Dice Golf
 date: 2022-07-17
 img: dice.png
-alt: circus.png
+alt: dice-full.png
 project-date: July 2022
 client: GMTK Game Jam 2022
 clientLink: https://itch.io/jam/gmtk-jam-2022
