Updated portfolio images

--- a/_posts/2022-04-25-project-4.markdown
+++ b/_posts/2022-04-25-project-4.markdown
@@ -3,7 +3,7 @@ layout: default
 modal-id: 4
 title: Laserscape
 date: 2022-04-24
-img: laser.png
+img: laser-alternate.png
 alt: laser.gif
 project-date: April 2022
 client: California Collegiate Game Jam
