--- a/_posts/2022-11-28-project-6.markdown
+++ b/_posts/2022-11-28-project-6.markdown
@@ -3,7 +3,7 @@ layout: default
 modal-id: 6
 title: Best Nest Quest
 date: 2022-11-28
-img: bnq.png
+img: bnq-alternate.png
 alt: bnq-full.png
 project-date: Fall Quarter 2022
 client: VGDC at UCI
