--- a/_posts/2022-03-10-project-5.markdown
+++ b/_posts/2022-03-10-project-5.markdown
@@ -5,7 +5,7 @@ title: Acid Trip 4
 date: 2022-03-10
 img: acid-alternate.png
 alt: acid.gif
-project-date: Winter Quarter 2022
+project-date: January 2022 - March 2022
 client: VGDC at UCI
 clientLink: https://itch.io/jam/vgdc-at-uci-winter-2022-games
 category: Producer / Programmer
