--- a/_posts/2023-03-14-project-7.markdown
+++ b/_posts/2023-03-14-project-7.markdown
@@ -5,7 +5,7 @@ title: Zot Racer
 date: 2023-03-14
 img: zr.png
 alt: zr.png
-project-date: Winter Quarter 2023
+project-date: January 2023 - March 2023
 client: VGDC at UCI
 clientLink: https://itch.io/jam/vgdc-at-uci-winter-2023-games
 category: Producer, Programmer
